# livekit-concurrency-example

./: .gitignore  README.md
worker-backend/: main.py  pyproject.toml
worker-ui/app/: page.tsx
worker-ui/app/api/connection-details/: route.ts
